--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: FMXNZcc6BdGuYFg3fAoxWw
+# Checksum: qreFxrq+2Mu8bbZLtPd+wg
 # Updated: 18 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -25,7 +25,6 @@
 -180x250.
 -180x60.
 -234x60-
-.macmillandictionary.com/info/frame.html?
 -235x58p
 -235x60-
 -250x250-
@@ -757,6 +756,7 @@
 .lycos.nl/ad/
 .m3.net/
 .m5prod.net/
+.macmillandictionary.com/info/frame.html?
 .madisonlogic.com/jsc?
 .madserver.eu/
 .magna.ru/partner/
@@ -1300,6 +1300,7 @@
 /728_200.
 /728_200_
 /728_90.
+/728_ad_
 /728by90_
 /728x15.
 /728X90
