--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qreFxrq+2Mu8bbZLtPd+wg
+# Checksum: uOUSoZnbi8uWdkQHkByyTQ
 # Updated: 18 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1660,6 +1660,7 @@
 /ajs.php?
 /ak/ads/
 /altClickToSearch.js
+/amaffiliate/private/resources/banners/
 /amazon/iframeproxy-
 /amazon/widget/
 /annonse/
