--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uOUSoZnbi8uWdkQHkByyTQ
-# Updated: 18 May 2010
+# Checksum: DeDfjMD6b0ZbCqwsVFXRxQ
+# Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1188,6 +1188,7 @@
 .yieldbuild.com/
 .yieldmanager.
 .yieldoptimizer.
+.yimg.com/ao/adv/
 .yimg.com/i/sg/adv/
 .yimg.jp/bdv/
 .youjizz.com/inline_ads.
