cleanup dead, old filters

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DeDfjMD6b0ZbCqwsVFXRxQ
+# Checksum: z97D507KQdgJW0jef14GCQ
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1982,15 +1982,9 @@
 /include/adsdaq
 /includes/ads/
 /includes/adtags/
-/infolinks_main.js
 /inline_ad.
 /InlineTextAds?
-/INSTREAMAD/
-/intercept_magid.
-/InternetAd/
-/invideoad.
 /iplgadshow
-/ireel/ad
 /j/ads.js
 /js.ng/c
 /js.ng/p
