--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: z97D507KQdgJW0jef14GCQ
+# Checksum: U9//fCHYvwO/t634wm0ElQ
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2325,7 +2325,6 @@
 /ysc_csc_news
 /ysc_csc_ymail
 /yt/swf/ad-
-/yume_ad_library
 /zdnet/i/ads/
 100x200.gif
 120x500.gif
