--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DeDfjMD6b0ZbCqwsVFXRxQ
+# Checksum: AuB7l9AU9v54zbGNDDiXzQ
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -418,6 +418,7 @@
 .com/adx.js
 .com/affiliate/
 .com/banners/
+.com/behaviorAds/
 .com/doubleclick/
 .com/gads/
 .com/hserver/
@@ -1608,6 +1609,7 @@
 /adsreporting/
 /adsRotator
 /adss.asp
+/AdsSrv.html?adpos=
 /AdsTemplate/
 /adstop.
 /adSwap.js
