--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QRRvxVu9G3MxVcsPFF3Tiw
+# Checksum: lCB2xOngntkD2SLosLAmzg
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2091,7 +2091,6 @@
 /pagepeel/
 /pagepeel_
 /PagePeelAd
-/pages/ads/
 /pages/ads/
 /pages/ads_
 /partnerAds/
