--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lCB2xOngntkD2SLosLAmzg
+# Checksum: vk+BOkwbaYck85Wmg60ZKg
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3363,6 +3363,7 @@ http://www.porno-file.ru/uploads/
 http://www.pro-clockers.com/images/banners/
 http://www.seemygf.com/webmasters/iframe/
 http://www.tripadvisor.com/adp/
+http://www.whistleout.com.au/Widgets/
 http://x7.to/
 http://xban.
 http://xcabin.net/b/
