--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ddmEGrpz5wFAy+3RqPLx6Q
+# Checksum: 6U2p6x7t3dpqKBUMB0vvgg
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1424,8 +1424,8 @@
 /adbanners/
 /AdBlock.ashx?
 /adbrite-
-/adbrite/square.
-/adbrite_banner_
+/adbrite/
+/adbrite_
 /adCampaigns/
 /adcast_
 /AdCell/
