site: http://www.climatempo.com.br/

--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -104,6 +104,7 @@
 /flogs.orange.es/
 /igbarra.js
 /imagem/urchin.gif?
+/imagens.climatempo.com.br/site/imagens/bg_
 /imgcontador.php?
 /ml.track.me?p=
 /promocao-
