removed old filter #2

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6U2p6x7t3dpqKBUMB0vvgg
+# Checksum: fc6GResoPreDj0+m2cQdoQ
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -894,7 +894,6 @@
 .paid-to-promote.net/
 .panachetech.
 .paperg.com/
-.partner.ysm.vip.
 .partnercash.de/
 .pcpro.co.uk/images/intelSkin_wide.jpg
 .pcr-online.biz/static/banners/
