--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: fc6GResoPreDj0+m2cQdoQ
+# Checksum: sBYXWv9fch5f75KVOscIVA
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -747,7 +747,6 @@
 .liveandchat.tv/bana-/
 .livejasmin.tv/banners/
 .liveleak.com/page_parts/
-.liverail.com/js/companions/?
 .livewords.search.
 .loveadverts.com/
 .ltassrv.com
