--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: sBYXWv9fch5f75KVOscIVA
+# Checksum: 9ijgk/Blo03ocn1U13T+bw
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -732,7 +732,6 @@
 .ligatus.de/
 .lijit.com/delivery/
 .lingospot.
-.link-popularity.
 .link.ru/
 .linkads.de/
 .linkbucks.com/Frame.aspx?
