--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9ijgk/Blo03ocn1U13T+bw
+# Checksum: kZuxW2vIQjnkFUegzFV+Aw
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -680,7 +680,6 @@
 .itsptp.com/
 .ivwbox.de/
 .iwantu.com/content/
-.iwebtool.com/src.js?
 .ixnp.com/
 .jame-world.com/_pic/adv/
 .japantimes.co.jp/ads/
