--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kZuxW2vIQjnkFUegzFV+Aw
+# Checksum: ichvfRU1PE5VLZ0YenjH7A
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1416,6 +1416,7 @@
 /ad_wide_
 /ad_wrapper
 /adaffiliate_
+/adbanner.
 /adbanner/
 /adbanners/
 /AdBlock.ashx?
