--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ichvfRU1PE5VLZ0YenjH7A
+# Checksum: GAU8A5OIee6BtSghxaJ+vQ
 # Updated: 19 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3240,6 +3240,7 @@ http://promos.fling.
 http://promos.meetlocals.com/
 http://promos.naked.
 http://promotools
+http://poponclick.com/
 http://pub.motion-twin.com/
 http://pubad.
 http://pubdirecte.com/
