--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GAU8A5OIee6BtSghxaJ+vQ
-# Updated: 19 May 2010
+# Checksum: iFspaAKHrwCfz4smp1wK9A
+# Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -418,7 +418,6 @@
 .com/adx.js
 .com/affiliate/
 .com/banners/
-.com/behaviorAds/
 .com/doubleclick/
 .com/gads/
 .com/hserver/
@@ -432,7 +431,6 @@
 .com/video-ad-
 .comclick.
 .commissionmonster.
-.compactbanner.
 .complexmedianetwork.com/
 .conduit-banners.
 .connectcommerce.
@@ -478,7 +476,6 @@
 .digitaldesire.com/gotd.php?
 .digitaldesire.com/zbanners/
 .dinclinx.com/
-.discovery.com/shared/swf/video-players/monetized/video-asset-companion-
 .dk/eas?
 .dl4all.com/data4.files/dpopupwindow.js
 .dlqm.net/
@@ -506,8 +503,6 @@
 .eliado.com/banner/
 .elitemediagroup.
 .elwatan.com/IMG/swf/
-.emarketmakers.
-.embracer.com/
 .emediate.eu/
 .emediate.se/
 .end-finder.com/
@@ -664,7 +659,6 @@
 .insites.eu/
 .insitesystems.com/
 .inskinad.com/
-.instantbuzz.
 .intellitxt.
 .interclick.
 .internebula.net/
@@ -1319,7 +1313,6 @@
 /960_60_
 /985x120_
 /?adv_partner
-/?op=advertising_
 /_include/ads/
 /_odd_images/banners/
 /_special/banners/
@@ -1694,7 +1687,6 @@
 /banner.js
 /banner.js?
 /banner.php
-/banner.resulthost.
 /banner.ws?
 /banner/468
 /banner/700
@@ -1749,6 +1741,7 @@
 /bansrc/
 /beacon/?
 /BelowNewsAd
+/behaviorAds/
 /BigBoxAd.
 /bigtopl.swf
 /bilder/anzeige
@@ -1805,9 +1798,9 @@
 /dateads.php
 /dclk/dclk_
 /deliver.jphp?
-/deliver.nmi?sid
+/deliver.nmi
 /deliverAd/
-/deliverjs.nmi?sid
+/deliverjs.nmi
 /delivery/afr.pa?
 /delivery/ag
 /delivery/spc.php?
@@ -1835,7 +1828,6 @@
 /etology.
 /event.ng/Type
 /ewtrack.gif?
-/exp_Proxy.js
 /external/ads/
 /external_ads.
 /extraMustard_topperIntro_
@@ -1850,7 +1842,7 @@
 /flashpeelads/
 /fleshlightcash_
 /floatadv.
-/floater_ad.js
+/floater_ad.
 /floaty_rotator
 /fncLargePlayer/brand/
 /footad-
@@ -2149,6 +2141,7 @@
 /reklame.asp?
 /reklame/
 /relatedads
+/RequestAdvertisement.
 /richOAS.
 /right_ad.
 /rightad.
@@ -2746,7 +2739,6 @@ contextad.
 contextads.net/
 contextclick.
 contextuallinks.
-cpaffiliates.net
 cubics.com
 currentads
 cyberclick.
@@ -3449,7 +3441,6 @@ spinbox.com/
 sponslinks
 sponsorads
 sponsored-results
-spotsystems.info
 storyads
 stripsaver.com/
 surveypopup
