--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iFspaAKHrwCfz4smp1wK9A
+# Checksum: REk1PD5iU9M6BGW9iStynQ
 # Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2146,7 +2146,6 @@
 /right_ad.
 /rightad.
 /rightbanner/
-/rotate/click.
 /rotating_banner.php
 /rotatingtextad
 /rotation/banner
