--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: REk1PD5iU9M6BGW9iStynQ
+# Checksum: +Vsg9eUAHN3cOW5uxQrpxw
 # Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -992,6 +992,7 @@
 .show_ad_js?
 .showyoursite.
 .siccash.com/
+.simply.com/
 .site.img.4tube.com/
 .siteadvisor.com/images/
 .sixsigmatraffic.
