remove and cleanup dead or old filters

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +Vsg9eUAHN3cOW5uxQrpxw
+# Checksum: 8qG9xJTs5ygc6rvDaUjzvw
 # Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -356,9 +356,7 @@
 .careerone.com.au/integration/
 .careers.adicio.com/qjs?clientid
 .casalemedia.
-.cashcrate.
 .cashlayer.
-.cashregie.
 .cashthat.
 .cb.cl/NewCBCL/Banner.
 .cb.cl/NewCBCL/images/cb_
@@ -378,11 +376,9 @@
 .clickintext.
 .clickkingdom.
 .clicksor.
-.clickxchange.
 .clickzs.com/ib.php?
 .clipjunkie.com/sftopbanner
 .clixgalore.
-.cliximages.
 .clixsense.com/Ad/
 .closepics.com/media/banners/
 .cloud-ips.com/givememygfp.php?
@@ -433,7 +429,6 @@
 .commissionmonster.
 .complexmedianetwork.com/
 .conduit-banners.
-.connectcommerce.
 .connexplace.com/
 .connextra.
 .contaxe.com/
@@ -501,7 +496,6 @@
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
 .eliado.com/banner/
-.elitemediagroup.
 .elwatan.com/IMG/swf/
 .emediate.eu/
 .emediate.se/
@@ -517,7 +511,6 @@
 .euros4click.
 .eweek.com/images/stories/Marketing/
 .exaccess.ru/
-.exchangead.
 .exclusivepussy.com/tcgma/?
 .exgirlfriendmarket.com/img2/ad/
 .exitjunction.
@@ -649,7 +642,6 @@
 .infinite-ads.
 .influads.com/
 .infolinks.com/action/
-.informative.com/
 .inforotor.net/rotor/
 .infoseek.co.jp/isweb/
 .infra-ad.com/
@@ -682,7 +674,6 @@
 .jetrun.jp/
 .jobtarget.com/distrib_pages/
 .jobzonen.dk/external/
-.joebucks.
 .jpassport.jp/
 .jpg?BannerId
 .js?BannerId
@@ -716,7 +707,6 @@
 .lbs.km.ru/
 .lduhtrp.
 .lduhtrp.net/image
-.leadhound.
 .leadmediapartners.
 .levexis.
 .lifestylefood.com.au/Content/Advertisements/
@@ -862,7 +852,6 @@
 .nvero.net/
 .nz/ads/
 .nzads.net.nz/
-.oadz.com/
 .oasfile.
 .oclus.com/
 .onads.com/
@@ -876,7 +865,6 @@
 .ospreymedialp.
 .otcash.com/images/
 .overclockers.co.uk/home_banners/
-.overpro.com/
 .overture.
 .oxado.com/
 .p-advg.com/
@@ -1088,10 +1076,7 @@
 .trafficholder.
 .trafficjunky.net/
 .trafficmp.
-.trafficregenerator.
 .trafficrevenue.net/
-.trafficswarm.
-.trafficsyndicate.
 .trafficsynergy.
 .traffictrader.
 .trafogon.net/show.php?
@@ -1140,7 +1125,6 @@
 .webads.nl/
 .webmasterlounge.
 .webmasterplan.
-.websponsors.
 .wegcash.com/click/
 .wendise.com/tools/thumbs
 .weselltraffic.
