remove and cleanup dead or old filters v2

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8qG9xJTs5ygc6rvDaUjzvw
+# Checksum: aHipW3p6oMWzpwSov6bqeA
 # Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1793,8 +1793,7 @@
 /direct_ads.js?
 /display-ads/
 /display?ad_
-/displayad.biz?
-/dixioforyoursite/
+/displayad.
 /DNSads.html?
 /doubleclickcontainer.aspx?
 /doubleclickloader.
@@ -1877,8 +1876,8 @@
 /google-story2-rb.js
 /google/ad3.js
 /google/GooglePlugin.swf
-/google160.html
-/google728.html
+/google160.
+/google728.
 /google_ad
 /Google_RADlinks_
 /googleAd
@@ -1992,9 +1991,7 @@
 /layout.inc.php?img
 /leftbanner/
 /lifeshowad/
-/linkshare/
-/list_leaderboard?
-/liveAds.php?
+/liveAds.
 /livejasmin.js
 /livejasmin/
 /livejasmin_o1.js?
