remove and cleanup dead or old filters v3

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: aHipW3p6oMWzpwSov6bqeA
+# Checksum: +LjmjGIYhMAS11WE5ZIlsA
 # Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2729,13 +2729,8 @@ deferads
 delivery_ad
 dhtmlpop
 display_ad
-doublefusion
-e-mailpaysu.
-eforcemedia
 enormousdating.com/iframe
 epiccams.com/exports/tour
-epiccash
-eyeblaster.
 facebook.com/beacon/
 files/ads_
 findjeux
