--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +LjmjGIYhMAS11WE5ZIlsA
+# Checksum: F6mYCKuUXW+Dxte989GL4A
 # Updated: 20 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1991,6 +1991,7 @@
 /layout.inc.php?img
 /leftbanner/
 /lifeshowad/
+/lit.lite.js
 /liveAds.
 /livejasmin.js
 /livejasmin/
