--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -207,6 +207,7 @@
 .e-referrer.com/
 .easyranking.de/
 .easyresearch.se
+.ectnews.com/shared/missing.gif?
 .effectivemeasure.
 .elitics.com/
 .eloqua.com/visitor/
