--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: F6mYCKuUXW+Dxte989GL4A
-# Updated: 20 May 2010
+# Checksum: cgG+asgP55VKbJrM4Awhgg
+# Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2113,6 +2113,7 @@
 /pyv_watch_request_ad.
 /quickads.no/
 /radOpenx?
+/railad.
 /rail_ad_
 /rcom-ads.js
 /RealMedia/ads/
