--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cgG+asgP55VKbJrM4Awhgg
+# Checksum: yIGObxbtT6NwwC004ob33g
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -504,6 +504,7 @@
 .eporner.com/ads-
 .ero-advertising.com
 .erosadv.com/
+.espn.go.com/ads/
 .etargetnet.com/generic/generic.php?
 .etology.
 .eurobate.
@@ -1345,6 +1346,7 @@
 /ad/img/
 /ad/realclick
 /ad/serve.php
+/ad/sponsors/
 /ad/swf/
 /ad/textlinks/
 /ad1.htm
@@ -1725,8 +1727,8 @@
 /banniere_
 /bansrc/
 /beacon/?
-/BelowNewsAd
 /behaviorAds/
+/BelowNewsAd
 /BigBoxAd.
 /bigtopl.swf
 /bilder/anzeige
@@ -2106,15 +2108,15 @@
 /protizer.ru/
 /psclicks.asp?
 /psdisasters
+/publicidad.
 /publicidad/
 /publicidad_
-/publicidad.
 /publicidade/
 /pyv_watch_request_ad.
 /quickads.no/
 /radOpenx?
-/railad.
 /rail_ad_
+/railad.
 /rcom-ads.js
 /RealMedia/ads/
 /realmedia_banner
@@ -3196,6 +3198,7 @@ http://pixxtra.com/js/popup.js
 http://plantaosexy.com/
 http://playlist.yahoo.com/makeplaylist.dll?
 http://pop-bazar.net/
+http://poponclick.com/
 http://pops.freeze.com/
 http://popurls.com/ad/
 http://porn-site-builder.com/
@@ -3210,7 +3213,6 @@ http://promos.fling.
 http://promos.meetlocals.com/
 http://promos.naked.
 http://promotools
-http://poponclick.com/
 http://pub.motion-twin.com/
 http://pubad.
 http://pubdirecte.com/
