--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: yIGObxbtT6NwwC004ob33g
+# Checksum: 4hsTKGFByy7hCrleznRjaw
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2702,15 +2702,6 @@ bannerbyte.
 bannerco-op
 bannerfinal
 bannerid=
-bannerimg
-bannermangement
-bannernr
-banneroverdrive.
-bannerplace
-bannerpromotion.
-bannerrotation
-banners/350
-bannersgomlm.
 bantex.ru/
 bravenetmedianetwork.
 budsinc.com/
