--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4hsTKGFByy7hCrleznRjaw
+# Checksum: ycvRQ6K9c/yabPtM6cv14g
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1575,6 +1575,7 @@
 /AdsInclude.js
 /adsjs.aspx?
 /adslug_
+/adslug-
 /adsmanagement/
 /AdsManager/
 /adsmodules/
