--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ycvRQ6K9c/yabPtM6cv14g
+# Checksum: BKkhOhNkT0KPh4xMixXT9g
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1912,6 +1912,7 @@
 /iframe.ad/
 /iframe/ad/
 /iframe/ads/
+/iframe_ads?
 /iframe_chitika_
 /iframes/adbrite.
 /image/ads/
