--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BKkhOhNkT0KPh4xMixXT9g
+# Checksum: WZhf0BmGOAVb56Y9U8XQMQ
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1574,8 +1574,8 @@
 /adshow/
 /AdsInclude.js
 /adsjs.aspx?
-/adslug_
 /adslug-
+/adslug_
 /adsmanagement/
 /AdsManager/
 /adsmodules/
@@ -2262,6 +2262,7 @@
 /twtad.com/
 /ucstat.
 /udmserve.net/
+/ugoAds.
 /upads.info/
 /uploads/ads/
 /valueclick
