--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uZ3o9m4vRSJsWSleJt0xSQ
+# Checksum: WZhf0BmGOAVb56Y9U8XQMQ
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -665,7 +665,6 @@
 .itpro.co.uk/images/skins/
 .itslive.com/exports/
 .itsptp.com/
-.itproportal.com/img/channels/ms/
 .ivwbox.de/
 .iwantu.com/content/
 .ixnp.com/
