remove oboslete filters

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WZhf0BmGOAVb56Y9U8XQMQ
+# Checksum: Z/UCvuCUIXQ1ljmfqhsHJA
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2700,10 +2700,6 @@ banner_vert
 BannerAd
 bannerad.
 bannerad_
-bannerboxes
-bannerbyte.
-bannerco-op
-bannerfinal
 bannerid=
 bantex.ru/
 bravenetmedianetwork.
@@ -2730,13 +2726,8 @@ display_ad
 enormousdating.com/iframe
 epiccams.com/exports/tour
 facebook.com/beacon/
-files/ads_
-findjeux
 forex-affiliate.
 fuck-access.com/
-google_ad_
-googleAdSense
-hogalia_ad
 house_ad
 http://196.41.0.207/
 http://1under.ru/
