remove oboslete filters v2

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Z/UCvuCUIXQ1ljmfqhsHJA
+# Checksum: GofrlYAnqG8DsGshuIp1OA
 # Updated: 21 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1464,6 +1464,7 @@
 /admarket/
 /admaster.
 /admedia
+/admentor/
 /admigo.ru/
 /admin/ad_
 /adng.html?
@@ -1483,6 +1484,8 @@
 /adroot/
 /adrot.js
 /adrotate/
+/admentor/
+/AdRotator/
 /adruptive.
 /ads-1.js
 /ads-2.js
@@ -1634,6 +1637,7 @@
 /affiliates/ban
 /affiliates/images/banners/
 /affilitebanners/
+/affiliate_banners/
 /afr.php?
 /ajax/ads/
 /ajrotator/
@@ -2662,28 +2666,16 @@ adbot.com
 adbutler.
 adcomplete.com/
 ademails.com
-adjuncts
-adjungle.
-adknowledge
-admentor
-admotion
-AdRotator
-adrotator
 ads/468x60
 ads4u.nl/
 adshop.ru/
-adsol.php
-adsxchange.
 adulttds.com
 advert_bottom
 advert_cent
 advert_left
 advert_right
 Advertisement.do?
-adzones.
-affiliat/banner
 affiliate/banner
-affiliate_banners
 affiliateBannerShow.aspx?
 affiliatewindow.com
 alt.com/go/
