remove oboslete filters v3

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GofrlYAnqG8DsGshuIp1OA
-# Updated: 21 May 2010
+# Checksum: YRvTeOrsUwPrNzlj8C088w
+# Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3343,20 +3343,6 @@ link-exchange
 link_tracker
 linktarget.
 linktracker
-localxml.com/
-m80im.com/
-mailyourad.
-mainbanner
-mds.centrport.net
-media-motor.net
-medianext.com/
-mediaprecision.
-mediaturf
-mediavantage
-medleyads.com/
-moderncl1ck.
-mspaceads
-narrowad
 network.stripplayer
 newnudecash.com/webmasters/
 nserver/SITE
@@ -3398,12 +3384,9 @@ spinbox.com/
 sponslinks
 sponsorads
 sponsored-results
-storyads
 stripsaver.com/
-surveypopup
 sz=160x200
 sz=47x47;
-tafmaster.
 text.burstnet
 totemcash.com/
 tyroo.com/
