--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: YRvTeOrsUwPrNzlj8C088w
+# Checksum: +7qJnvnbgTr9xNmp2UZfxA
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3357,19 +3357,12 @@ popdowncash.
 popinads
 Popunder
 popunder
-popupsponsor
-popupsurv
-popuptraffic
 porn-hitz.com/
 pornkings.com/
 private.camz.
-promobenef.
 protect-x.com/
-realtextads
 resimler.randevum.
 revenue.net/
-right-ads
-secureads
 server/AAMALL
 server/CCID
 sexmoney.com/
