remove oboslete filters v5

--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -318,6 +318,7 @@
 .ipro.com/
 .ipstats.de/
 .ipv6monitoring.eu/
+.insightgrit.com/
 .istrack.com/
 .itgear.jp/
 .ixquick.com/cgi-bin/ccspacer?&anticache=
