--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +7qJnvnbgTr9xNmp2UZfxA
+# Checksum: PpcUHD9VtbYHJnDBG21sYA
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3328,21 +3328,12 @@ images/ads/
 img.freexxxpages.net/z/
 img.pornbb.org/b2.html
 innerads
-insightfirst.
-insightgrit.
 instacontent.net
-instantattention
-instantdollarz.
-intellisrv.
-kanoodle_ad
 keyrun.com/
 LargeFlashAd.js
 left-ads
 lienket247.com/
 link-exchange
-link_tracker
-linktarget.
-linktracker
 network.stripplayer
 newnudecash.com/webmasters/
 nserver/SITE
