remove oboslete filters v6

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PpcUHD9VtbYHJnDBG21sYA
+# Checksum: CuJbQDROqOz68HsRJjSugQ
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1776,6 +1776,7 @@
 /compban.html?
 /content/adtag
 /context_ad/
+/contextad.
 /contextads.
 /core77_ad.aspx?z
 /corner_ads/
@@ -2702,17 +2703,12 @@ center-ad
 cibleclick.
 cjt1.net/
 cognigen.net
-contextad.
 contextads.net/
 contextclick.
 contextuallinks.
 cubics.com
-currentads
-cyberclick.
 d468x60-
 dbbsrv.com/
-deferads
-delivery_ad
 dhtmlpop
 display_ad
 enormousdating.com/iframe
@@ -3336,11 +3332,8 @@ lienket247.com/
 link-exchange
 network.stripplayer
 newnudecash.com/webmasters/
-nserver/SITE
 nudography.com/photos/banners/
-onlineads
 outster.com/
-paycounter
 paypopup
 peel/peel
 pop_under
