remove oboslete filters v6.1

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: CuJbQDROqOz68HsRJjSugQ
+# Checksum: 5i7UlbNy/OyPGmqY1HfOsg
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2699,7 +2699,6 @@ bravenetmedianetwork.
 budsinc.com/
 bunnypoker.com
 cams.com/go/
-center-ad
 cibleclick.
 cjt1.net/
 cognigen.net
