remove oboslete filters v7

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5i7UlbNy/OyPGmqY1HfOsg
+# Checksum: L3AJUcGz+xeSCE7oD01e5g
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1869,6 +1869,7 @@
 /getBanner.
 /getbanner.cfm?
 /getbanner.php?
+/getsponslinks
 /getmdhlink.
 /getmdhlink.php?
 /getsad.php?
@@ -2207,6 +2208,7 @@
 /sponLink.htm?
 /sponsor-ad
 /sponsoradds/
+/sponsorads
 /sponsored-links-
 /sponsored_ad
 /sponsored_by.
@@ -3355,11 +3357,6 @@ showbanner=
 sixsigmatraffic.com/cs/
 size=300x250;
 size=468x60
-special_ads
-spinbox.com/
-sponslinks
-sponsorads
-sponsored-results
 stripsaver.com/
 sz=160x200
 sz=47x47;
