--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: L3AJUcGz+xeSCE7oD01e5g
+# Checksum: /0lS+mh0vM01LdUA72rheQ
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -618,6 +618,7 @@
 .ibtimes.com/banner/
 .ideal-sexe.com/
 .idg.com.au/idg/fpromo/
+.idg.com.au/files/skins/
 .idregie.com/
 .ign.com/advertisers/
 .illimitux.net/js/abp.js
