--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /0lS+mh0vM01LdUA72rheQ
+# Checksum: +fZyiZYctHJGJs1A9v5jMA
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3144,7 +3144,6 @@ http://newads.
 http://newt1.adultadworld.
 http://ns4w.org/images/promo/
 http://ns4w.org/images/vod_
-http://nsads.
 http://nzphoenix.com/
 http://oas.
 http://oascentral.hosted.ap.
