--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +fZyiZYctHJGJs1A9v5jMA
+# Checksum: qkDzmLT44AIIkT3ywTBnYg
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2216,6 +2216,7 @@
 /sponsored_links1.js
 /sponsored_links_
 /sponsored_listings.html?
+/sponsors_box.
 /sponsoredlinks
 /SponsoredLinksIFrame
 /sponsors/amg.php?
@@ -3112,7 +3113,6 @@ http://links.freeones.com/link
 http://linksave.in/fopen
 http://lisa.belointeractive.
 http://live-add.com/banner/
-http://lookbook.nu/sponsors_box.
 http://lubetube.com/banners/
 http://lubetube.com/images/cubebanners/
 http://luxup.ru/show/
