--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +fZyiZYctHJGJs1A9v5jMA
+# Checksum: WEf1xNlSWxujU+SzwRFvQQ
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -617,8 +617,8 @@
 .ibannerexchange.com/
 .ibtimes.com/banner/
 .ideal-sexe.com/
-.idg.com.au/idg/fpromo/
 .idg.com.au/files/skins/
+.idg.com.au/idg/fpromo/
 .idregie.com/
 .ign.com/advertisers/
 .illimitux.net/js/abp.js
@@ -1466,6 +1466,7 @@
 /admaster.
 /admedia
 /admentor/
+/admentor/
 /admigo.ru/
 /admin/ad_
 /adng.html?
@@ -1485,7 +1486,6 @@
 /adroot/
 /adrot.js
 /adrotate/
-/admentor/
 /AdRotator/
 /adruptive.
 /ads-1.js
@@ -1635,10 +1635,10 @@
 /aff.html
 /AFF/Banners/
 /affiliate/rotat
+/affiliate_banners/
 /affiliates/ban
 /affiliates/images/banners/
 /affilitebanners/
-/affiliate_banners/
 /afr.php?
 /ajax/ads/
 /ajrotator/
@@ -1870,11 +1870,11 @@
 /getBanner.
 /getbanner.cfm?
 /getbanner.php?
-/getsponslinks
 /getmdhlink.
 /getmdhlink.php?
 /getsad.php?
 /getSponsLinks
+/getsponslinks
 /getVdopiaAds.
 /gfx/ads/
 /GgAdsense.
@@ -2219,6 +2219,7 @@
 /sponsoredlinks
 /SponsoredLinksIFrame
 /sponsors/amg.php?
+/sponsors_box.
 /SpotXchangePlugin.
 /square-ads/
 /st?ad_type
@@ -3112,7 +3113,6 @@ http://links.freeones.com/link
 http://linksave.in/fopen
 http://lisa.belointeractive.
 http://live-add.com/banner/
-http://lookbook.nu/sponsors_box.
 http://lubetube.com/banners/
 http://lubetube.com/images/cubebanners/
 http://luxup.ru/show/
