--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TkqV76IPwTn0Cy0sHlg+lw
+# Checksum: XFYjqw0PVURdOPQyBMBXnQ
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1769,7 +1769,6 @@
 /click_to_buy/
 /cnads.js
 /cnwk.1d/Ads/
-/cnwk.1d/i/tron/doors/ads/
 /combo?darla/
 /common/ad_
 /common/dart_wrapper_
@@ -1804,6 +1803,7 @@
 /display?ad_
 /displayad.
 /DNSads.html?
+/doors/ads/
 /doubleclickcontainer.aspx?
 /doubleclickloader.
 /download/ad/
