--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XFYjqw0PVURdOPQyBMBXnQ
+# Checksum: zgi0+MWo4BHd1Odo2Obf8g
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3324,7 +3324,6 @@ https://adserv
 https://view.atdmt.
 images/ads/
 img.freexxxpages.net/z/
-img.pornbb.org/b2.html
 innerads
 instacontent.net
 keyrun.com/
