--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zgi0+MWo4BHd1Odo2Obf8g
+# Checksum: 0ZK772LRujPOkHSCbdH9KA
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -397,7 +397,6 @@
 .com/ad.js
 .com/AD/
 .com/ad/
-.com/ad_image.swf
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -1371,6 +1370,7 @@
 /ad_html/
 /ad_iframe.
 /ad_iframe_
+/ad_image.swf
 /ad_index_
 /ad_js.php?
 /ad_keywords.
