--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0ZK772LRujPOkHSCbdH9KA
+# Checksum: 8gbd2j7Dn4pttcPhc1/cJg
 # Updated: 22 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1370,7 +1370,7 @@
 /ad_html/
 /ad_iframe.
 /ad_iframe_
-/ad_image.swf
+/ad_image.
 /ad_index_
 /ad_js.php?
 /ad_keywords.
