unused, dead filter

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8gbd2j7Dn4pttcPhc1/cJg
-# Updated: 22 May 2010
+# Checksum: 6q+sy9nlrjFlupHnj5QINg
+# Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1108,7 +1108,6 @@
 .valueclickmedia.
 .vcmedia.
 .velmedia.net/
-.videoplaza.com/resources/preroll_interactive/
 .videosz.com/custom/yuvutu/
 .vietad.vn/
 .vipquesting.com/
