unused, dead filter v3

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6q+sy9nlrjFlupHnj5QINg
+# Checksum: D9Jy9IuMneXANz79w6zI2w
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -794,7 +794,6 @@
 .mrskin.com/js_feeds.
 .mrskincash.com/
 .msads.net/
-.msn.com/?w=
 .msquaredproductions.com/
 .mumbaimirror.com/ads/
 .myad.no/
