really minor filter

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: D9Jy9IuMneXANz79w6zI2w
+# Checksum: B30TsPnxoouES/ruSOaTYA
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -834,7 +834,6 @@
 .netshelter.net/serve.cgi?
 .neuesdate.com/banner/
 .newpct.com/soporte
-.newswireless.net/contentimages/sponsors/
 .newzfind.com/ads/
 .newzfind.com/ads/
 .nexac.com/
