--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: B30TsPnxoouES/ruSOaTYA
+# Checksum: f0T/v9lVMx1X8Q5Q8sre3g
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3146,7 +3146,6 @@ http://nzphoenix.com/
 http://oas.
 http://oascentral.hosted.ap.
 http://oasis.
-http://objectservers.com/play/
 http://odnidoma.com/ban/
 http://openx.
 http://outils.f5biz.
