unused, dead filter v6

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: f0T/v9lVMx1X8Q5Q8sre3g
+# Checksum: 8tJYNgt4//D4il5zoO1zKA
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -247,7 +247,6 @@
 .alphagodaddy.com/
 .amazon.co.uk/widgets/
 .amazon.com/e/cm?t
-.amazon.com/exec/varzea/tipbox/
 .amazon.com/widgets/
 .amazonaws.com/widget/
 .amgdgt.com/
