optimise a bit more

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8tJYNgt4//D4il5zoO1zKA
+# Checksum: ko1q4Q+gHnVRsZfLFOjvzQ
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2885,19 +2885,16 @@ http://adsame.
 http://adsatt.abcnews.
 http://adsatt.espn.
 http://adscontent
-http://adse-
 http://adsearch.
 http://adserv
+http://adse-2.liverail.com/
 http://adsfac.
-http://adsfac.net/
-http://adsfac.us/
 http://adsfast.com/
 http://adshare.
 http://adsremote.
 http://adsrv.
 http://adsyndication.
 http://adsys.
-http://adt.
 http://adtag.
 http://adtc.daum.net/
 http://adtech.panthercustomer.com/images/
