move to jpn list

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ko1q4Q+gHnVRsZfLFOjvzQ
+# Checksum: xS6cwCX5lJT9vslWmbIWRQ
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1148,7 +1148,6 @@
 .xxxcounter.
 .xxxporntalk.com/images/
 .xxxwebtraffic.com/
-.y-bbs.net/k/
 .yadro.ru/ad/
 .yahoo.co.jp/js/sq.js
 .yahoo.com/livewords/
