--- a/easylistfanboy/iron/adblock-krn.ini
+++ b/easylistfanboy/iron/adblock-krn.ini
@@ -413,6 +413,7 @@
 .wownet.co.kr/upload_view/banner/
 .yonhapnews.co.kr/ad/
 .yonhapnews.co.kr/Basic/Banner/
+.y-bbs.net/k/
 .ytn.co.kr/_comm/article_down_ad.
 .ytn.co.kr/inc_banner/
 .yyinews.co.kr/images/ad_
