--- a/easylistfanboy/iron/adblock-jpn.ini
+++ b/easylistfanboy/iron/adblock-jpn.ini
@@ -83,6 +83,7 @@
 .tv-tokyo.co.jp/index/recommend/
 .weblio.jp/
 .xrea.com/banner
+.y-bbs.net/k/
 .yimg.jp/bdv/
 .yimg.jp/images/news/newsSearch/img/banner
 /ad_bomb/
