--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xS6cwCX5lJT9vslWmbIWRQ
+# Checksum: 2Ry+46I4q9VmNo+72xvCPg
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -973,7 +973,6 @@
 .shareresults.
 .shooshtime.com/adfiles/
 .shooshtime.com/images/chosenplugs/
-.shopzilla.com/pp/
 .shortcuts.search.
 .show_ad_js?
 .showyoursite.
