move to tky list

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2Ry+46I4q9VmNo+72xvCPg
+# Checksum: ub0Z+l6xt0hbxqOf4PSNug
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -993,7 +993,6 @@
 .sociallypublish.com/publish/
 .socialmedia.com/
 .softcab.com/google.php?
-.softreklam.com/
 .sophus3.
 .sparkstudios.
 .specialsuggestion.
