--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ub0Z+l6xt0hbxqOf4PSNug
+# Checksum: eqJyuCE9We3h/rRYnHdAxQ
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3219,7 +3219,6 @@ http://siftad.
 http://slickdeals.meritline.com/live
 http://slutdrive.com/img/bgf_
 http://smartad.
-http://solution911.com/
 http://spcwm.com/
 http://spe.atdmt.
 http://sponsoredlinks.
