--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: eqJyuCE9We3h/rRYnHdAxQ
+# Checksum: rBLUt1TJIXvCYTo25tFY8g
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3161,6 +3161,7 @@ http://pixxtra.com/ad/
 http://pixxtra.com/js/popup.js
 http://plantaosexy.com/
 http://playlist.yahoo.com/makeplaylist.dll?
+http://pmsrvr.com/click/display
 http://pop-bazar.net/
 http://poponclick.com/
 http://pops.freeze.com/
