--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rBLUt1TJIXvCYTo25tFY8g
+# Checksum: QfxlvoAsQEVSquokVasFkA
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1356,6 +1356,7 @@
 /ad_caption.
 /ad_common
 /ad_count.php?
+/ad_engine?
 /ad_feed.js?
 /ad_footer
 /ad_frame.php?
