--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: QfxlvoAsQEVSquokVasFkA
+# Checksum: LjBN1M0p+XtaWEBTde+kHQ
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1843,6 +1843,7 @@
 /gam.html?
 /gam_ad_
 /gca_iframe.html?
+/geo-ads_
 /geobox.html
 /geoday.ru/
 /get-ad.php?
@@ -2210,10 +2211,10 @@
 /sponsored_links1.js
 /sponsored_links_
 /sponsored_listings.html?
-/sponsors_box.
 /sponsoredlinks
 /SponsoredLinksIFrame
 /sponsors/amg.php?
+/sponsors_box.
 /sponsors_box.
 /SpotXchangePlugin.
 /square-ads/
@@ -2883,9 +2884,9 @@ http://adsame.
 http://adsatt.abcnews.
 http://adsatt.espn.
 http://adscontent
+http://adse-2.liverail.com/
 http://adsearch.
 http://adserv
-http://adse-2.liverail.com/
 http://adsfac.
 http://adsfast.com/
 http://adshare.
