--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LjBN1M0p+XtaWEBTde+kHQ
+# Checksum: 1/On3Tu9RkHcOGaIyX2QmQ
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -527,7 +527,6 @@
 .fileporn.org/banner
 .filetarget.
 .filezexpress.info/
-.filitrac.
 .fimserve.
 .first-rate.com/
 .firstadsolution.
@@ -1357,7 +1356,7 @@
 /ad_common
 /ad_count.php?
 /ad_engine?
-/ad_feed.js?
+/ad_feed.
 /ad_footer
 /ad_frame.php?
 /ad_holder/
@@ -1451,7 +1450,7 @@
 /adjs_mod
 /adlayer
 /adlink.gif
-/adloader.swf?
+/adloader.
 /adlog.php?
 /adman/www/
 /admanagement/
@@ -1570,14 +1569,14 @@
 /adshow-
 /adshow.js
 /adshow/
-/AdsInclude.js
+/AdsInclude.
 /adsjs.aspx?
 /adslug-
 /adslug_
 /adsmanagement/
 /AdsManager/
 /adsmodules/
-/adsonar.js?
+/adsonar.
 /adsOpenx/
 /adspace
 /adsrc.html?
@@ -1796,7 +1795,7 @@
 /display-ads/
 /display?ad_
 /displayad.
-/DNSads.html?
+/DNSads.
 /doors/ads/
 /doubleclickcontainer.aspx?
 /doubleclickloader.
@@ -2098,7 +2097,7 @@
 /plcornerswf.swf?
 /plugins/page-cornr
 /plugins/wp_actionpop/
-/popAds.js
+/popAds.
 /portal_assets/
 /ppd_ads.php?
 /predictad.
