--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 1/On3Tu9RkHcOGaIyX2QmQ
+# Checksum: 5me+djsEtgVW/cDINDHeDg
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -62,7 +62,6 @@
 -fleshlight
 -tebya-na-dosuge.com/
 .123advertising.nl/
-.125exchange.
 .160x600_
 .247realmedia.
 .2dpt.com/
