--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5me+djsEtgVW/cDINDHeDg
+# Checksum: lY1Fl4/W9ffvPbC68KT86A
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -316,6 +316,7 @@
 .blomoad.jp/
 .blueadvertise.
 .bluestreak.com/
+.blumi.to/
 .bns1.net/
 .bodyrock.tv/wp-content/uploads/2010/02/banner_
 .boo-box.com/javascripts/embed.js
