--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qMV7+c6cPIWVrFH9tcKItg
+# Checksum: lY1Fl4/W9ffvPbC68KT86A
 # Updated: 23 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3052,7 +3052,6 @@ http://geoshopping.nzherald.
 http://girlsofdesire.org/banner/
 http://glamour.cz/banners/
 http://glean.pop6.com/
-http://gon.cdn.on.net/zaphod/
 http://gws.ign.com/
 http://hfimage.head-fi.org/sponsors/
 http://hjlas.com/images/
