--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: lY1Fl4/W9ffvPbC68KT86A
-# Updated: 23 May 2010
+# Checksum: 71e5r4POxqGHZnVgpXy03w
+# Updated: 24 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1519,6 +1519,7 @@
 /ads/msnpopup
 /ads/oas/
 /ads/page.php?
+/ads/plugs/
 /ads/preloader/
 /ads/request.php?
 /ads/right
@@ -1795,6 +1796,7 @@
 /display-ads/
 /display?ad_
 /displayad.
+/displayads.
 /DNSads.
 /doors/ads/
 /doubleclickcontainer.aspx?
@@ -3257,6 +3259,7 @@ http://trackin.affiliserve.com/
 http://trade.porndirt.com/cgi-bin/
 http://trader.erosdlz.com/
 http://traffic.liveuniversenetwork.
+http://trafficcdn.liveuniversenetwork.com/
 http://traffic4adult.com/generate.
 http://ts.richmedia.yahoo.com/
 http://turboshare.com/images/banner-
