--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 71e5r4POxqGHZnVgpXy03w
+# Checksum: 340nEKXydfZqJXmUfWdOog
 # Updated: 24 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -445,6 +445,7 @@
 .crakmedia.com/www/
 .crispads.
 .crowdgravity.com/
+.crocoads.com/
 .cumulusads.com/
 .cybermonitor.
 .dailymotion.com/masscast/
@@ -1083,6 +1084,7 @@
 .ttzmedia.
 .tube8.com/ad?
 .tubemogul.com/adtags/
+.tubedspots.com/
 .tumri.net/
 .turboimagehost.com/p.js?
 .twistyscash.com/banner/
