--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 340nEKXydfZqJXmUfWdOog
-# Updated: 24 May 2010
+# Checksum: BD1/pFN0g1upCXPztTpMcA
+# Updated: 25 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -444,8 +444,8 @@
 .crakmedia.com/sponsors/
 .crakmedia.com/www/
 .crispads.
-.crowdgravity.com/
 .crocoads.com/
+.crowdgravity.com/
 .cumulusads.com/
 .cybermonitor.
 .dailymotion.com/masscast/
@@ -1083,8 +1083,8 @@
 .tribalfusion.
 .ttzmedia.
 .tube8.com/ad?
-.tubemogul.com/adtags/
 .tubedspots.com/
+.tubemogul.com/adtags/
 .tumri.net/
 .turboimagehost.com/p.js?
 .twistyscash.com/banner/
@@ -2928,6 +2928,7 @@ http://alternads.info/
 http://annonse.
 http://annonser.
 http://anzeigen
+http://appbodega.com/Promos/
 http://armorgames.com/misc/banners/
 http://athena-ads.
 http://au2m8.com/
@@ -3261,8 +3262,8 @@ http://trackin.affiliserve.com/
 http://trade.porndirt.com/cgi-bin/
 http://trader.erosdlz.com/
 http://traffic.liveuniversenetwork.
-http://trafficcdn.liveuniversenetwork.com/
 http://traffic4adult.com/generate.
+http://trafficcdn.liveuniversenetwork.com/
 http://ts.richmedia.yahoo.com/
 http://turboshare.com/images/banner-
 http://u-ads.adap.tv/
