--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BD1/pFN0g1upCXPztTpMcA
+# Checksum: c511ddVJBMTvTXt+gKO2NA
 # Updated: 25 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2249,7 +2249,6 @@
 /textads/
 /textads_
 /thebannerserver.net/
-/themes/tc/ad/
 /thumbs/ads/
 /tikilink?
 /tizers.php?
