--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BD1/pFN0g1upCXPztTpMcA
+# Checksum: ObOXjeSUbCIVjp2vmPtnKQ
 # Updated: 25 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1596,6 +1596,7 @@
 /adsystem.
 /adsystem/
 /ads~adsize~
+/adtag.gif
 /adtag.htm?
 /adtago.
 /AdTech.
