--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iJ6s1oq3+7udaJoiX7QYVw
+# Checksum: Spp5TN2mf67QpMDEpYOXvw
 # Updated: 25 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1689,13 +1689,10 @@
 /banner_125x
 /banner_468x
 /banner_ad
-/banner_flv2.php?
 /banner_management/
 /banner_view.php?
 /BannerAd
 /bannerad
-/bannercache/
-/bannerclick
 /bannerconduit.
 /bannerframeopenads
 /bannerInc.
@@ -1716,7 +1713,6 @@
 /banners/ad
 /banners/aff.
 /banners/affil
-/banners/ban_
 /banners/banner
 /banners/custom-300-
 /banners/ffadult/
@@ -1913,7 +1909,6 @@
 /html.ng/
 /html/ad/
 /html/ads_
-/html_js/
 /ifb/google_afc.
 /iframe.ad/
 /iframe/ad/
@@ -2028,10 +2023,8 @@
 /network_ad.
 /NeudesicAd.
 /newaff/float
-/newinserts/
 /newscomaubusiness/css/promotions/
 /ngbn.net/
-/npscroller/
 /nsfw/sponsors/
 /oas/ad/
 /OAS_Handler.
