--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -305,6 +305,7 @@
 .inflectionpointmedia.com/
 .innovateads.
 .insightexpressai.
+.insightgrit.com/
 .insites.eu/Survey/
 .intelimet.
 .intelli-direct.
@@ -318,7 +319,6 @@
 .ipro.com/
 .ipstats.de/
 .ipv6monitoring.eu/
-.insightgrit.com/
 .istrack.com/
 .itgear.jp/
 .ixquick.com/cgi-bin/ccspacer?&anticache=
@@ -1029,6 +1029,7 @@
 /ordertrack/
 /ot_e404.gif?
 /oxtracker.
+/p.iivt.com/js/ni.js
 /page-track.gif?
 /pageCounter.adp?
 /pagedot.gif?
@@ -1064,9 +1065,9 @@
 /pixeltracker
 /PixelTracking
 /pixy.gif?
+/plugins/catman/
 /powercount.
 /pphlogger.
-/plugins/catman/
 /pro-ping.php?
 /promos/pixels?
 /pubimppixel/
