--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Spp5TN2mf67QpMDEpYOXvw
-# Updated: 25 May 2010
+# Checksum: rrNxfsD2WumA1DxCTMQwPQ
+# Updated: 26 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2994,7 +2994,7 @@ http://connect.decknetwork.net/
 http://content-ads.
 http://content.liveuniverse.
 http://content.pop6.com/
-http://cp.intl.match.com/
+http://cp.intl.match.com/eng/prm/
 http://creative.ak.fbcdn.net/ads3/
 http://creatives.livejasmin.com/iframes/
 http://d.ads.readwriteweb.com/
