--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rrNxfsD2WumA1DxCTMQwPQ
-# Updated: 26 May 2010
+# Checksum: eY+4X7ljmphrSJzaCm/H7A
+# Updated: 27 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2187,6 +2187,7 @@
 /site_ads.
 /SiteAds/
 /skyframeopenads
+/slate_ad2.
 /SlideshowGallery.
 /slideshowintad?
 /smalltopl.swf
@@ -2644,6 +2645,7 @@ _engine_ads_
 _english/adv/
 _files/ad.
 _geobanner.
+_generic_ad.
 _google_ad.
 _google_video_ads
 _leftx280_
