--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: eY+4X7ljmphrSJzaCm/H7A
+# Checksum: rZjiFUYlpTf3bYT4Ek7czg
 # Updated: 27 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -40,6 +40,7 @@
 -468x80-
 -480x120.
 -480x60.
+-486x60.
 -500x100.
 -507x45_
 -600x90-
