--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rZjiFUYlpTf3bYT4Ek7czg
+# Checksum: G3BA7L0LG7PHRu6oIK6UwQ
 # Updated: 27 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1495,6 +1495,7 @@
 /ads.htm
 /ads.js.php?
 /ads.json?
+/ads.over-blog.com/
 /ads.php
 /ads.php?
 /ads.pl?
@@ -1649,6 +1650,7 @@
 /annonse/
 /annonser/
 /anonymouse.org/ad
+/anti-adblock/
 /anti-adblock/css/
 /api.tattermedia.com/
 /api/ads/
@@ -1925,6 +1927,7 @@
 /imageads/
 /images.ads.
 /images/336x280
+/images/ad/
 /images/ad_
 /images/adbar.gif
 /images/ADS
@@ -2457,6 +2460,7 @@
 =760x120&
 =888x10;
 =900x60;
+=akiba_ads_
 ?ad_width=
 ?AdType
 ?adunitid
@@ -2632,6 +2636,7 @@ _adengage_
 _adlog.asp?
 _adRight.
 _Ads/InHouse
+_ads_index_
 _adshow.asp?
 _advert_vert
 _advertisement_
@@ -2645,8 +2650,8 @@ _DynamicAds/
 _engine_ads_
 _english/adv/
 _files/ad.
-_geobanner.
 _generic_ad.
+_geobanner.
 _google_ad.
 _google_video_ads
 _leftx280_
