--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: G3BA7L0LG7PHRu6oIK6UwQ
+# Checksum: T4LiJGASmR8zsFkbjtlJ0g
 # Updated: 27 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -497,6 +497,7 @@
 .edge.ru4.
 .eliado.com/banner/
 .elwatan.com/IMG/swf/
+.elyrics.net/inc/ads/
 .emediate.eu/
 .emediate.se/
 .end-finder.com/
