--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: T4LiJGASmR8zsFkbjtlJ0g
+# Checksum: JFSEvlh+K9W0yiZ3dWgE1g
 # Updated: 27 May 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3300,6 +3300,8 @@ http://www.hardsextube.com/preroll/
 http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
 http://www.mazda.com.au/banners/
+http://www.npplpoker.com.au/images/banners/
+http://www.npplpoker.com.au/images/frontpage/corporate_ban
 http://www.p2pnet.net/images/
 http://www.physorg.com/banner/
 http://www.pomsinoz.com/images/sponsors/
